<resources>
    <string name="app_name">PRODUCTOS YA</string>
    <string name="tv_email">Correo</string>
    <string name="tv_pass">Contraseña</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_estado">Estado del Producto</string>
    <string name="tv_nombre">Nombre del producto</string>
    <string name="tv_costo">Costo del producto</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="NombreProducto">Nombre del Producto</string>
    <string name="CorreoProducto">Email</string>
    <string name="TelefonoProducto">Costo del Producto</string>
    <string name="EstadoProducto">Estado del Producto</string>
    <string name="btAddProducto">Agregar Producto</string>
    <string name="ms_AddProducto">Producto Agregado</string>
    <string name="ms_FaltaValores">Faltan Valores</string>
    <string name="ms_UpdateProducto">Producto Modifcado</string>
    <string name="ms_EliminarProducto">Producto Eliminado</string>

    <string name="todo">TODO</string>

    <string name="btUpdateProducto">Actualizar Producto</string>
    <string name="btDeleteProducto">Eliminar Producto</string>






</resources>