<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.home.UpdateProductoFragment">


    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/NombreProducto"
        android:inputType="textPersonName"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/et_correo_lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/CorreoProducto"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/TelefonoProducto"
        android:inputType="phone"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/et_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/EstadoProducto"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/bt_update_lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btUpdateProducto" />

    <Button
        android:id="@+id/bt_delete_lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btDeleteProducto" />
    />

</LinearLayout>