<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.home.GuardarProductoFragment">

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NombreProducto"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/CorreoProducto"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TelefonoProducto"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/et_estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/EstadoProducto"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/bt_Agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btAddProducto"
        android:textColor="#FAF6F6"
        app:iconTint="#F3F4F6"
        app:rippleColor="#681B1B" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/bt_photo"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_photo" />

        <ImageButton
            android:id="@+id/bt_rota_l"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_rotate_l" />

        <ImageButton
            android:id="@+id/bt_rota_r"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_rotate_r" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:contentDescription="@string/ms_AddProducto"
        android:scaleType="centerInside"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/backgrounds/scenic" />

</LinearLayout>

